--- a/src/main/resources/main_window.fxml
+++ b/src/main/resources/main_window.fxml
@@ -6,20 +6,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ro.se.lab.WindowController"
-            prefHeight="400.0" prefWidth="600.0">
-    <children>
-        <Button fx:id="testBtn"
-                text="Click me!"
-                onAction="#OnTestBtnPressed"
-                layoutX="150"
-                layoutY="100"/>
-        <Label fx:id="testLabel"
-               layoutX="250"
-               layoutY="100"
-               minHeight="16"
-               minWidth="50"/>
-    </children>
-</AnchorPane>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.canvas.Canvas?>
+<GridPane xmlns="http://javafx.com/javafx"
+          xmlns:fx="http://javafx.com/fxml"
+          fx:controller="ro.se.lab.Controllers.WindowController"
+          prefHeight="420.0" prefWidth="600.0"
+          hgap="50" vgap="10">
+    <padding>
+        <Insets top="25" right="25" left="25" bottom="25"/>
+    </padding>
+    <columnConstraints>
+        <ColumnConstraints minWidth="250" prefWidth="250" maxWidth="250" halignment="LEFT"/>
+        <ColumnConstraints minWidth="250" prefWidth="250" maxWidth="250" halignment="RIGHT"/>
+    </columnConstraints>
+    <!-- Working on grids -->
+    <fx:include source="country_dropdown.fxml"
+                GridPane.rowIndex="0" GridPane.columnIndex="0"
+                GridPane.columnSpan="1" GridPane.rowSpan="1"
+                GridPane.halignment="CENTER"/>
+
+    <fx:include source="city_dropdown.fxml"
+                GridPane.rowIndex="0" GridPane.columnIndex="1"
+                GridPane.columnSpan="1" GridPane.rowSpan="1"
+                GridPane.halignment="CENTER"/>
+</GridPane>
