Update UI to final. Connected backend to UI

--- a/src/main/resources/appstyle.css
+++ b/src/main/resources/appstyle.css
@@ -1,9 +1,5 @@
-.column1{
--fx-background-color: red;
-}
-
-.column2{
--fx-background-color: blue;
+.main{
+-fx-background-color: #DDDDDD;
 }
 
 .dropdown{
